--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ li {
 .present {
     list-style: none;
     height: 50px;
-    background-color: white;
+    background-color: lightblue;
     border: 3px solid black;
     width: 100%;
 }
